# wellsourced

./: Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  devenv.nix
.github/workflows/: ci.yml  docker-build-publish.yml
src/: cli.rs  collector.rs  display.rs  linter.rs  main.rs  parser.rs  policy.rs  report.rs  utils.rs
src/collector/: api.rs  metrics.rs  report.rs  template.rs
src/linter/: rules.rs
src/linter/rules/: host_source_is_self.rs  insecure_scheme.rs  missing_source.rs  no_base_uri.rs  no_enforce_policy.rs  no_form_action.rs  no_upgrade_insecure_requests.rs  repeated_directive.rs  repeated_source.rs  unknown_directive.rs  unknown_source.rs
