[package]
name = "wellsourced"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
axum = "0.8.4"
bon = "3.7.1"
clap = { version = "4.5.46", features = ["derive"] }
color-eyre = "0.6.5"
colored = "3.0.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
winnow = "0.7.13"

[profile.release]
opt-level = 'z'
debug = false
lto = true
codegen-units = 1

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
